--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,7 @@ jobs:
           cd scripts
           npm install
           node generate.mjs
+          cp -r ../assets/* ../dist
       - uses: JamesIves/github-pages-deploy-action@4.1.1
         with:
           branch: gh-pages
