ci: Add static site export

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,8 +15,10 @@ jobs:
           cd scripts
           npm install
           node generate.mjs
-          cp -r ../assets/* ../dist
+          cd ../site
+          npm install
+          npm run build
       - uses: JamesIves/github-pages-deploy-action@4.1.1
         with:
           branch: gh-pages
-          folder: dist
+          folder: site/out
