--- a/site/package.json
+++ b/site/package.json
@@ -23,6 +23,7 @@
     "typescript": "5.2.2"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.10",
     "eslint": "8.51.0",
     "eslint-config-next": "13.5.5",
     "prettier": "^3.0.3",
