--- a/site/package.json
+++ b/site/package.json
@@ -14,6 +14,7 @@
     "@types/node": "20.8.6",
     "@types/react": "18.2.28",
     "@types/react-dom": "18.2.13",
+    "@vercel/analytics": "^1.1.1",
     "autoprefixer": "^10.4.16",
     "clsx": "^2.0.0",
     "next": "13.5.5",
